# genworlds

./: .env.example  .gitignore  .replit  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  yagents_start_pod.py
.replit_config/: .example.replit  main.py  pyproject.toml
.replit_config/cli_configurations/: roundtable_cli_config_example.json
agents_creator_lab/: .gitignore  events.py  start_env.py  world_setup_n_launch.py
agents_creator_lab/agents/: y_tools.py
agents_creator_lab/env_agents/: y_tools.py
agents_creator_lab/env_objects/: blackboard.py
agents_creator_lab/objects/: blackboard.py  job.py  microphone.py
agents_creator_lab/world_agents/: y_tools.py
agents_creator_lab/world_objects/: blackboard.py
docs/: .gitignore  docusaurus.config.js  package-lock.json  package.json
docs/docs/: genworlds-marketplace.md  getting-started.md  intro.md  world-definition.md
genworlds/: __init__.py
genworlds/agents/: __init__.py
genworlds/chat_utility_layer/: assistant.py
genworlds/core/: action.py  agent.py  comms.py  entity.py  llm_calls.py  simulation.py  types.py  utils.py
genworlds/events/: __init__.py  base_event.py  basic_events.py  simulation_socket_event_handler.py  websocket_event_handler.py
genworlds/interfaces/: __init__.py  cli.py
genworlds/objects/: __init__.py  base_object.py
genworlds/properties/: basic_properties.py
genworlds/simulation/: __init__.py  simulation.py
genworlds/sockets/: world_socket_client.py  world_socket_server.py
genworlds/utils/: logging_factory.py  schema_to_model.py  test_user.py
genworlds/worlds/: __init__.py  base_world.py  (+1 more)
(+233 files in other folders)
