[tool.poetry]
name = "genworlds"
version = "0.0.18"
description = "GenWorlds by YeagerAI: Pioneering AI-based simulations based on collaborative autonomous agents."
authors = []

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
click="8.1.3"
colorama="0.4.6"
colorlog="6.7.0"
fastapi="0.88.0"
fastjsonschema="2.16.3"
jsonschema="4.17.3"
langchain="0.0.335"
openai="0.28.0"
prompt-toolkit="3.0.38"
pydantic="1.10.7"
python-dotenv="1.0.0"
qdrant-client="1.2.0"
threadpoolctl="3.1.0"
tiktoken="0.4.0"
uvicorn="0.21.1"
websocket-client="1.5.1"
websockets="11.0.3"


[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
black = "^23.3.0"
pytest = "7.4.0"
poetry = "1.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
