[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
click="8.1.3"
colorama="0.4.6"
colorlog="6.7.0"
fastapi="0.88.0"
fastjsonschema="2.16.3"
jsonschema="4.17.3"
langchain="0.0.200"
openai="0.27.4"
prompt-toolkit="3.0.38"
pydantic="1.10.7"
python-dotenv="1.0.0"
qdrant-client="1.2.0"
threadpoolctl="3.1.0"
tiktoken="0.4.0"
uvicorn="0.21.1"
websocket-client="1.5.1"
websockets="11.0.3"


[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"